{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 347,
  "lineage": "ae7aabc6-8af1-f535-9de7-42984927c7e2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "chaos-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-04a131f50a7b86648",
            "arn": "arn:aws:ec2:us-east-2:736956442401:instance/i-0946bfd15b069a8ae",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0946bfd15b069a8ae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "chaos-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-071d004dbb71a1fed"
              }
            ],
            "primary_network_interface_id": "eni-071d004dbb71a1fed",
            "private_dns": "ip-10-0-1-46.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.46",
            "public_dns": "ec2-3-148-217-182.us-east-2.compute.amazonaws.com",
            "public_ip": "3.148.217.182",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "environment": "dev",
                  "owner": "ajordanr",
                  "project": "chaos-engineering"
                },
                "tags_all": {
                  "environment": "dev",
                  "owner": "ajordanr",
                  "project": "chaos-engineering"
                },
                "throughput": 0,
                "volume_id": "vol-0552114de3039a247",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2a2261572f5b681",
            "tags": {
              "Name": "chaos-master"
            },
            "tags_all": {
              "Name": "chaos-master",
              "environment": "dev",
              "owner": "ajordanr",
              "project": "chaos-engineering"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0be2ad4b3b1722b89"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "736956442401",
            "id": "i-0946bfd15b069a8ae",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_key_pair.chaos-keypair",
            "aws_security_group.chaos-sg",
            "aws_subnet.chaos-subnet",
            "aws_vpc.chaos-vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.chaos-key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "chaos-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-04a131f50a7b86648",
            "arn": "arn:aws:ec2:us-east-2:736956442401:instance/i-0e0d4365f9a5fa907",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e0d4365f9a5fa907",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "chaos-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03eefaaf21a556d22"
              }
            ],
            "primary_network_interface_id": "eni-03eefaaf21a556d22",
            "private_dns": "ip-10-0-1-171.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.171",
            "public_dns": "ec2-3-139-80-184.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.80.184",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "environment": "dev",
                  "owner": "ajordanr",
                  "project": "chaos-engineering"
                },
                "tags_all": {
                  "environment": "dev",
                  "owner": "ajordanr",
                  "project": "chaos-engineering"
                },
                "throughput": 0,
                "volume_id": "vol-0032e9b79195b938e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2a2261572f5b681",
            "tags": {
              "Name": "chaos-worker-0"
            },
            "tags_all": {
              "Name": "chaos-worker-0",
              "environment": "dev",
              "owner": "ajordanr",
              "project": "chaos-engineering"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0be2ad4b3b1722b89"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "736956442401",
            "id": "i-0e0d4365f9a5fa907",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_key_pair.chaos-keypair",
            "aws_security_group.chaos-sg",
            "aws_subnet.chaos-subnet",
            "aws_vpc.chaos-vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.chaos-key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-04a131f50a7b86648",
            "arn": "arn:aws:ec2:us-east-2:736956442401:instance/i-03a43459e82a5c53c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03a43459e82a5c53c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "chaos-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04f0e71364b5a23dd"
              }
            ],
            "primary_network_interface_id": "eni-04f0e71364b5a23dd",
            "private_dns": "ip-10-0-1-203.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.203",
            "public_dns": "ec2-18-224-43-49.us-east-2.compute.amazonaws.com",
            "public_ip": "18.224.43.49",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "environment": "dev",
                  "owner": "ajordanr",
                  "project": "chaos-engineering"
                },
                "tags_all": {
                  "environment": "dev",
                  "owner": "ajordanr",
                  "project": "chaos-engineering"
                },
                "throughput": 0,
                "volume_id": "vol-0a5d9045681209504",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f2a2261572f5b681",
            "tags": {
              "Name": "chaos-worker-1"
            },
            "tags_all": {
              "Name": "chaos-worker-1",
              "environment": "dev",
              "owner": "ajordanr",
              "project": "chaos-engineering"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0be2ad4b3b1722b89"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "736956442401",
            "id": "i-03a43459e82a5c53c",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_key_pair.chaos-keypair",
            "aws_security_group.chaos-sg",
            "aws_subnet.chaos-subnet",
            "aws_vpc.chaos-vpc",
            "data.aws_ami.ubuntu",
            "tls_private_key.chaos-key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "chaos-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:736956442401:internet-gateway/igw-0f8b86842e64bbdeb",
            "id": "igw-0f8b86842e64bbdeb",
            "owner_id": "736956442401",
            "region": "us-east-2",
            "tags_all": {
              "environment": "dev",
              "owner": "ajordanr",
              "project": "chaos-engineering"
            },
            "vpc_id": "vpc-09b911cdc6ad9eda1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.chaos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "chaos-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:736956442401:route-table/rtb-02a937e0ea3fd15e9",
            "id": "rtb-02a937e0ea3fd15e9",
            "owner_id": "736956442401",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f8b86842e64bbdeb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "environment": "dev",
              "owner": "ajordanr",
              "project": "chaos-engineering"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b911cdc6ad9eda1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "736956442401",
            "id": "rtb-02a937e0ea3fd15e9",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_internet_gateway.chaos-igw",
            "aws_vpc.chaos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chaos-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d52a23c5cb5fa2e4",
            "region": "us-east-2",
            "route_table_id": "rtb-02a937e0ea3fd15e9",
            "subnet_id": "subnet-0f2a2261572f5b681"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.chaos-igw",
            "aws_route_table.chaos-rt",
            "aws_subnet.chaos-subnet",
            "aws_vpc.chaos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chaos-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:736956442401:security-group/sg-0be2ad4b3b1722b89",
            "description": "Allow inbound and outbound traffic according to rules.",
            "egress": [],
            "id": "sg-0be2ad4b3b1722b89",
            "ingress": [],
            "name": "papers_please",
            "name_prefix": "",
            "owner_id": "736956442401",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chaos-sg"
            },
            "tags_all": {
              "Name": "chaos-sg",
              "environment": "dev",
              "owner": "ajordanr",
              "project": "chaos-engineering"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b911cdc6ad9eda1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "736956442401",
            "id": "sg-0be2ad4b3b1722b89",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.chaos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chaos-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:736956442401:subnet/subnet-0f2a2261572f5b681",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2a2261572f5b681",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "736956442401",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags_all": {
              "environment": "dev",
              "owner": "ajordanr",
              "project": "chaos-engineering"
            },
            "vpc_id": "vpc-09b911cdc6ad9eda1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "736956442401",
            "id": "subnet-0f2a2261572f5b681",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_vpc.chaos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "chaos-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:736956442401:vpc/vpc-09b911cdc6ad9eda1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00802ec0d6ebb4270",
            "default_route_table_id": "rtb-06490aefbe9b84f97",
            "default_security_group_id": "sg-0d7233a1793a31ec8",
            "dhcp_options_id": "dopt-00f81cf93bc442b1a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09b911cdc6ad9eda1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06490aefbe9b84f97",
            "owner_id": "736956442401",
            "region": "us-east-2",
            "tags_all": {
              "environment": "dev",
              "owner": "ajordanr",
              "project": "chaos-engineering"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "736956442401",
            "id": "vpc-09b911cdc6ad9eda1",
            "region": "us-east-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "chaos-sg-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:736956442401:security-group-rule/sgr-0b6d0b547f5bc3a25",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0b6d0b547f5bc3a25",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-0be2ad4b3b1722b89",
            "security_group_rule_id": "sgr-0b6d0b547f5bc3a25",
            "tags": null,
            "tags_all": {
              "environment": "dev",
              "owner": "ajordanr",
              "project": "chaos-engineering"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "736956442401",
            "id": "sgr-0b6d0b547f5bc3a25",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.chaos-sg",
            "aws_vpc.chaos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "chaos-sg-dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:736956442401:security-group-rule/sgr-0f4c758a9c29dd038",
            "cidr_ipv4": "96.245.5.230/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2333,
            "id": "sgr-0f4c758a9c29dd038",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-0be2ad4b3b1722b89",
            "security_group_rule_id": "sgr-0f4c758a9c29dd038",
            "tags": null,
            "tags_all": {
              "environment": "dev",
              "owner": "ajordanr",
              "project": "chaos-engineering"
            },
            "to_port": 2333
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "736956442401",
            "id": "sgr-0f4c758a9c29dd038",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.chaos-sg",
            "aws_vpc.chaos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "chaos-sg-etcd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:736956442401:security-group-rule/sgr-085b1bc8a3904ae58",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 2379,
            "id": "sgr-085b1bc8a3904ae58",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-0be2ad4b3b1722b89",
            "security_group_rule_id": "sgr-085b1bc8a3904ae58",
            "tags": null,
            "tags_all": {
              "environment": "dev",
              "owner": "ajordanr",
              "project": "chaos-engineering"
            },
            "to_port": 2380
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "736956442401",
            "id": "sgr-085b1bc8a3904ae58",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.chaos-sg",
            "aws_vpc.chaos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "chaos-sg-flannel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:736956442401:security-group-rule/sgr-0f44bb9d10afaeb3d",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8472,
            "id": "sgr-0f44bb9d10afaeb3d",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-0be2ad4b3b1722b89",
            "security_group_rule_id": "sgr-0f44bb9d10afaeb3d",
            "tags": null,
            "tags_all": {
              "environment": "dev",
              "owner": "ajordanr",
              "project": "chaos-engineering"
            },
            "to_port": 8472
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "736956442401",
            "id": "sgr-0f44bb9d10afaeb3d",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.chaos-sg",
            "aws_vpc.chaos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "chaos-sg-k3s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:736956442401:security-group-rule/sgr-0fb1a7363d129a507",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 6443,
            "id": "sgr-0fb1a7363d129a507",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-0be2ad4b3b1722b89",
            "security_group_rule_id": "sgr-0fb1a7363d129a507",
            "tags": null,
            "tags_all": {
              "environment": "dev",
              "owner": "ajordanr",
              "project": "chaos-engineering"
            },
            "to_port": 6443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "736956442401",
            "id": "sgr-0fb1a7363d129a507",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.chaos-sg",
            "aws_vpc.chaos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "chaos-sg-kubelet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:736956442401:security-group-rule/sgr-0cc3d5fa818207d87",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 10250,
            "id": "sgr-0cc3d5fa818207d87",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-0be2ad4b3b1722b89",
            "security_group_rule_id": "sgr-0cc3d5fa818207d87",
            "tags": null,
            "tags_all": {
              "environment": "dev",
              "owner": "ajordanr",
              "project": "chaos-engineering"
            },
            "to_port": 10250
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "736956442401",
            "id": "sgr-0cc3d5fa818207d87",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.chaos-sg",
            "aws_vpc.chaos-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "chaos-sg-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:736956442401:security-group-rule/sgr-085c7d8b47a0f9009",
            "cidr_ipv4": "96.245.5.230/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-085c7d8b47a0f9009",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-2",
            "security_group_id": "sg-0be2ad4b3b1722b89",
            "security_group_rule_id": "sgr-085c7d8b47a0f9009",
            "tags": null,
            "tags_all": {
              "environment": "dev",
              "owner": "ajordanr",
              "project": "chaos-engineering"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "736956442401",
            "id": "sgr-085c7d8b47a0f9009",
            "region": "us-east-2"
          },
          "dependencies": [
            "aws_security_group.chaos-sg",
            "aws_vpc.chaos-vpc"
          ]
        }
      ]
    }
  ]
}